# personal-budget-analyzer

./: .dockerignore  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  TECH_STACK.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  .env.prod.example  .gitignore  requirements.txt  seed_data.sh  seed_ml_data.sh
backend/app/: initial_data.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  api.py
backend/app/core/: celery_app.py  config.py  email.py  logger_init.py  security.py
backend/app/crud/: __init__.py  base.py  crud_bill.py  crud_budget.py  crud_category.py  crud_category_feedback.py  crud_goal.py  crud_goal_transaction.py  crud_password_reset.py  crud_transaction.py  crud_user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  bill.py  budget.py  category.py  category_feedback.py  goal.py  goal_transaction.py  password_reset_token.py  transaction.py  user.py
backend/app/schemas/: __init__.py  bill.py  budget.py  category.py  category_feedback.py  goal.py  goal_transaction.py  transaction.py  user.py
backend/app/services/: ml_service.py  ocr_service.py  report_service.py
backend/app/tasks/: __init__.py  email.py
docker/: backend.Dockerfile  backend.prod.Dockerfile  frontend.Dockerfile  frontend.prod.Dockerfile  nginx.frontend.conf
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/charts/: BudgetVsActual.tsx  SpendingPieChart.tsx  (+1 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: amplify.ts
frontend/src/pages/: AddTransaction.tsx  Analytics.tsx  Bills.tsx  Budgets.tsx  Categories.tsx  Dashboard.tsx  ForgotPassword.tsx  Goals.tsx  Login.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  Transactions.tsx  VerifyEmail.tsx
frontend/src/utils/: api.ts
(+10 files in other folders)
